<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ImageToPDF">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/toDoEmptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:text="@string/tap"
                android:textSize="20sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/ic_add_black_24dp"
                android:tint="@android:color/white"
                app:backgroundTint="@color/colorAccent"
                app:fabSize="mini"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:text="@string/to_add_image_files"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

    <com.vimalcvs.pdfreader.helper.RecyclerViewEmptySupport
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:scrollingCache="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:id="@+id/parentfloatbutton"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="47dp"
        android:gravity="bottom|end"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addFilesFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_smlarge"
            android:layout_marginTop="@dimen/spacing_middle"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="@dimen/spacing_middle"
            android:src="@drawable/ic_folder_black_24dp"
            android:tint="@android:color/white"
            app:fabSize="mini"
            tools:ignore="ContentDescription" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="@dimen/spacing_middle"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp"
                app:contentPadding="@dimen/spacing_medium">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/add_images"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/white" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabadd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginStart="@dimen/spacing_smlarge"
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_marginEnd="@dimen/spacing_smlarge"
                android:layout_marginBottom="@dimen/spacing_middle"
                app:fabSize="mini"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/ic_add_black_24dp"
                tools:ignore="ContentDescription" />

            <View
                android:layout_width="@dimen/spacing_xmedium"
                android:layout_height="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="@dimen/spacing_middle"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp"
                app:contentPadding="@dimen/spacing_medium">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/convert_to_pdf"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/converttopdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginStart="@dimen/spacing_smlarge"
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_marginEnd="@dimen/spacing_smlarge"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_image_to_pdf"
                tools:ignore="ContentDescription" />

            <View
                android:layout_width="@dimen/spacing_xmedium"
                android:layout_height="0dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
